--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+html, body { height: 100%; background-color: rgb(15, 15, 15);
+    
+}
+body { margin: 0; font-family: "Helvetica Neue", sans-serif; }
+
